Style tweak, prevent page jumping on VA table navigation for grid mode
Handles no-resizing window case, and resizing to size with y scrollbar. 
Doesn't work if resizing to size without scrollbar (have to refresh).

--- a/chi/css/tracker.css
+++ b/chi/css/tracker.css
@@ -90,6 +90,10 @@ html {
   margin-bottom: 10%;
 }
 
+#navigation, #transfer {
+  margin-bottom: 1.5rem;
+}
+
 #va-info-bio {
   margin-bottom: 1rem;
   display: flex;
